--- a/mobile/android/app/src/main/assets/index.html
+++ b/mobile/android/app/src/main/assets/index.html
@@ -67,11 +67,20 @@
           onApprove: function(data, actions) {
             return actions.order.capture().then(function(details) {
               // Show a success message to the buyer
-              alert(
-                "Transaction completed by " +
-                  details.payer.name.given_name +
-                  "!"
+              window.postMessage(
+                JSON.stringify({
+                  reference: data.orderID,
+                  message: `Transaction completed by ${
+                    details.payer.name.given_name
+                  }`,
+                  status: "success"
+                })
               );
+              // alert(
+              //   "Transaction completed by " +
+              //     details.payer.name.given_name +
+              //     "!"
+              // );
             });
           }
         })
