change some messages

--- a/mobile/android/app/src/main/assets/index.html
+++ b/mobile/android/app/src/main/assets/index.html
@@ -70,9 +70,9 @@
               window.postMessage(
                 JSON.stringify({
                   reference: data.orderID,
-                  message: `Transaction completed by ${
+                  message: `Transaçāo completa, ${
                     details.payer.name.given_name
-                  }`,
+                  }!`,
                   details,
                   status: "success"
                 })
